feat: getuserbyid
