# cmd/authentication/main.go
@@ -94,6 +94,7 @@ func main() {
 	{
 		apiRoutes.PUT("/user/:id", authMiddleware("exhibitor"), userHandler.UpdateUserByID)
 		apiRoutes.PUT("/user/change-password", authMiddleware("exhibitor"), userHandler.ChangePassword)
+		apiRoutes.GET("/user/:id", userHandler.GetUserByID)
 	}
 
 	// Run the server
